<resources>
    <string name="app_name">TouristGuide</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="login">Login</string>
    <string name="login_with_google">Sign in with Google</string>
    <string name="or">Or</string>
    <string name="have_not_account">Don\'t have an account?</string>
    <string name="signup">Sign up</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm password</string>
    <string name="invalid_email">Email is invalid!</string>
    <string name="empty_email">Email is required!</string>
    <string name="short_password">At least 6 characters</string>
    <string name="empty_username">Username is required!</string>
    <string name="confirmation_not_match">Confirmation password doesn\'t match password</string>
    <string name="existing_email">Email is already exist</string>
    <string name="email_verification_message">We\'ve sent you an email that contains a link to verify your email:</string>
    <string name="email_verification">Email verification</string>
    <string name="edit_your_email">Edit your email</string>
    <string name="cancel"><b>Cancel</b></string>
    <string name="resend"><b>Resend</b></string>
    <string name="email_verification_instruction">If you can\'t find the email. Click \"Resend\" to resend it.</string>
    <string name="sign_up_failed">Sign up failed. Please try again!</string>
    <string name="back_to_login"><b>Back to login</b></string>
    <string name="login_failed">Email or password is incorrect!</string>
    <string name="please_wait">Please wait …</string>
    <string name="default_client_id">627401112351-n78vthojo77qrpbch860l7fnfi4lgpdp.apps.googleusercontent.com</string>
    <string name="log_out">Log out</string>
    <string name="google_sign_in_failed">Google sign in failed!</string>
    <string name="forgot_password_instruction">We need your registered email to send you password reset instructions.</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="reset">Reset</string>
    <string name="email_not_exist">Email does not exist</string>
    <string name="reset_password_email_sent">We have sent you an email to reset your password. Please check your email and follow the instructions</string>
    <string name="account">Account</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="group">Group</string>
    <string name="new_group">New group</string>
    <string name="no_group">You have not joined a group yet.</string>
    <string name="name_group">Name the group</string>
    <string name="selected">Selected:</string>
    <string name="search_user">Type email or username</string>
    <string name="post">Posts</string>
    <string name="notification">Notifications</string>
    <string name="more">More</string>
    <string name="change_username">Change username</string>
    <string name="change_avatar">Change avatar</string>
    <string name="change_phone">Change phone number</string>
    <string name="change_password">Change password</string>
    <string name="tel">Tel:</string>
    <string name="upload_failed">Upload image failed. Please try again!</string>
    <string name="save"><b>Save</b></string>
    <string name="telephone_number">Telephone number</string>
    <string name="download">Download</string>
    <string name="download_succeed">is downloaded!</string>
    <string name="incorrect_password">Password is incorrect!</string>
    <string name="new_password">New password</string>
    <string name="same_password">The new password is the same as the old one!</string>
    <string name="location_permission_denied">The app needs to access your device\'s location to display and share with other members.</string>
    <string name="network_and_gps_not_working">The network and GPS on the device are not working.</string>
    <string name="create_new_group">Create a group</string>
    <string name="join_group">Join a group</string>
    <string name="leave">Leave</string>
    <string name="share_location_setting">Do you want to share location with other members?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="chat">Chat</string>
    <string name="change_leader">Change leader</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="no_notification">You have no notifications!</string>
    <string name="accept_invitation_failed">You can not join this group!</string>
    <string name="leave_group_confirm">Do you want to leave this group?</string>
    <string name="group_code">Enter group code</string>
    <string name="join"><b>Join</b></string>
    <string name="join_request_send">Your request to join the group has been submitted. Please wait for a response.</string>
    <string name="turn_on_location_sharing">Turn on location sharing</string>
    <string name="turn_off_location_sharing">Turn off location sharing</string>
    <string name="members">Members</string>
    <string name="get_group_code">Get group code</string>
    <string name="your_group_code_is">Your group code is: </string>
    <string name="copy">Copy</string>
    <string name="add_member">Add member</string>
    <string name="remove_member_confirm">Do you want to remove this member from the group?</string>
    <string name="change_leader_introduction"><b>Select a member as the group leader:</b></string>
    <string name="no_active_members">No active members now!</string>
    <string name="change_group_name">Change group name</string>
    <string name="change_group_photo">Change group photo</string>
    <string name="enter_message">Enter your message …</string>
    <string name="loading_image">Loading image …</string>
    <string name="enter_group_name">Enter group name</string>
    <string name="open_in_another_map">Open in Google Maps</string>
    <string name="view_member_information">View member information</string>
    <string name="open_google_map_failed">Please install Google Maps app on your device!</string>
    <string name="share_location">Share this location</string>
    <string name="remove">Remove</string>
    <string name="location_sharing_addition">Say some thing about this location (optional):</string>
    <string name="share"><b>Share</b></string>
    <string name="loading_location">Loading location …</string>
    <string name="bold_open_in_another_map"><b>Open in Google Maps</b></string>
    <string name="record_audio_permission_required">The app needs audio recording permission to detect your cry for help.</string>
    <string name="sos_turn_on">We noticed your distress signal and sent it to other group members.</string>
    <string name="stop_sos">Stop SOS</string>
    <string name="sos_received"> A member of your team sent a distress signal.</string>
    <string name="no_user_found">No users found</string>
    <string name="nearby">Nearby</string>
    <string name="my_post">My posts</string>
    <string name="search">Search</string>
    <string name="new_post">New Post</string>
    <string name="title"><b>Title</b></string>
    <string name="enter_post_title">Enter a title for your post</string>
    <string name="description"><b>Description</b></string>
    <string name="enter_post_description">Enter a description of the location</string>
    <string name="photos"><b>Photos</b></string>
    <string name="location"><b>Location</b></string>
    <string name="topic"><b>Topic</b></string>
    <string name="photography">Photography</string>
    <string name="food_and_drink">Food and drink</string>
    <string name="travel">Travel</string>
    <string name="activity">Activity</string>
    <string name="publish">Publish</string>
    <string name="topic_failed">You must select a topic for the post!</string>
    <string name="title_failed">You must enter a title for the post!</string>
    <string name="description_failed">Description requires at least 100 characters!</string>
    <string name="location_failed">You must choose a location!</string>
    <string name="all">All</string>
    <string name="no_post">No post</string>
    <string name="post_deleted">This post has been deleted!</string>
    <string name="delete">Delete</string>
    <string name="post_location_click">Click</string>
    <string name="here"><u>here</u></string>
    <string name="post_location_click1">to see this location!</string>
    <string name="post_report_confirm">This post is spam?</string>
    <string name="edit_post">Edit post</string>
    <string name="delete_post_confirm">Do you want to delete this post?</string>
    <string name="comment">Comments</string>
    <string name="write_comment">Write comment …</string>
    <string name="no_comment">No comment</string>
    <string name="email">Email</string>
</resources>