<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF"
    android:paddingRight="?dialogPreferredPadding"
    android:paddingLeft="?dialogPreferredPadding"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/email_verification_message"
        android:id="@+id/tv_verification_message"
        android:textColor="#5C5C5C"
        android:textSize="16sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_verification_message"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="#000000"
        android:textSize="16sp"
        android:text="example@gmail.com"
        android:gravity="center"
        android:id="@+id/tv_email_address"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_instructions"
        app:layout_constraintTop_toBottomOf="@+id/tv_email_address"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/email_verification_instruction"
        android:textColor="#5C5C5C"
        android:textSize="16sp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_instructions"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/btn_back_to_login"
        android:textSize="18sp"
        android:textColor="#2196F3"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:text="@string/back_to_login"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btn_resend"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/cancel"
        android:id="@+id/btn_edit_email"
        android:textSize="18sp"
        android:textColor="#2196F3"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_resend"
        app:layout_constraintTop_toBottomOf="@+id/btn_back_to_login"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:text="@string/resend"
        android:textSize="18sp"
        android:textColor="#2196F3"
        >

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>