<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="#FDFDFD">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="ifContentScrolls" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="24dp"
            android:src="@drawable/app_logo_2"
            android:id="@+id/app_logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="24dp"
            android:hint="@string/email"
            app:hintTextColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/TextLabel"
            android:id="@+id/til_email_login"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/Error"
            app:layout_constraintTop_toBottomOf="@+id/app_logo" >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/LoginEditext"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:id="@+id/ed_email_login" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:hintTextColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintTop_toBottomOf="@+id/til_email_login"
            android:layout_marginHorizontal="24dp"
            app:hintTextAppearance="@style/TextLabel"
            android:id="@+id/til_password_login"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/Error" >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/LoginEditext"
                android:maxLines="1"
                android:inputType="textPassword"
                android:id="@+id/ed_password_login" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_forgot_password"
            app:layout_constraintTop_toBottomOf="@+id/til_password_login"
            app:layout_constraintRight_toRightOf="parent"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/forgot_password"
            android:textSize="16sp"
            android:textColor="#000000" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:text="@string/login"
            android:background="@drawable/shape_solid_accent_corner"
            android:textAllCaps="false"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            app:layout_constraintWidth_percent="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_forgot_password" />

        <TextView
            android:id="@+id/tv_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/or"
            android:textColor="@color/colorPrimaryText"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:background="@color/colorDivider"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintTop_toTopOf="@id/tv_or"
            app:layout_constraintBottom_toBottomOf="@id/tv_or"
            app:layout_constraintStart_toStartOf="@id/btn_login"
            app:layout_constraintEnd_toStartOf="@id/tv_or" />

        <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:background="@color/colorDivider"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintTop_toTopOf="@id/tv_or"
            app:layout_constraintBottom_toBottomOf="@id/tv_or"
            app:layout_constraintStart_toEndOf="@id/tv_or"
            app:layout_constraintEnd_toEndOf="@id/btn_login" />

        <com.shobhitpuri.custombuttons.GoogleSignInButton
            android:id="@+id/btn_signin_google"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:elevation="8dp"
            android:text="@string/login_with_google"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.8"
            app:layout_constraintTop_toBottomOf="@id/tv_or"
            android:layout_marginTop="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btn_signin_google"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/lnl_signup">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/have_not_account"
                android:textSize="16sp"
                android:id="@+id/tv_dont_have_account"
                android:textColor="#000000" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:textSize="16sp"
                android:textColor="#F44336"
                android:id="@+id/btn_to_sign_up"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
